--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,10 +16,11 @@ body {
     width: 800px;
     border: 4px solid steelblue;
   }
-  p {
-    padding: 10px;
+  .main-para {
+    font-size: 1.5em;
+    line-height: 1.5em;
   }
-  footer {
-    background-color: steelblue;
-    color: white;
+  #active {
+    background-color: rgb(238, 242, 245);
+    color: rgb(55, 84, 231);
   }
