--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,26 +1,38 @@
-body {
+
+  nav, footer {
     text-align: center;
-  }
-  nav {
     background-color: steelblue;
+    color: white;
     padding: 10px;
   }
   a {
     color: white;
     margin: 40px;
+    font-size: 1.5em;
   }
   h1 {
     color: steelblue;
+    text-align: center;
   }
   img {
-    width: 800px;
+    width: 80%;
+    display: block;
     border: 4px solid steelblue;
+    margin: 20px auto;
   }
-  .main-para {
+  
+  main p {
     font-size: 1.5em;
-    line-height: 1.5em;
+    width: 80%;
+    margin: 10px auto;
+    text-align: center;
   }
   #active {
     background-color: rgb(238, 242, 245);
     color: rgb(55, 84, 231);
   }
+  a:hover {
+    background-color: white;
+    color: steelblue;
+  }
+  
