--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -7,13 +7,43 @@
 }
 nav a{text-align: center;
     color: white;
-    text-decoration: none;} 
+    text-decoration: none;
+    padding: 35px;}
+nav {display: flex;
+    justify-content: space-around;}
+#logo_link {padding-top: 5px;
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;}
+#hero {display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;}
+#hero-msg {grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;}
+#hero-box {grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;}
+.home-grid {display: grid;
+    grid-template-columns: repeat(10, 1fr);}
+.card-img, .mountains {width: 100%;}
+.rivers-card {grid-column: 2/4;
+    grid-row: 2/3;}
+.camping-card {grid-column: 5/7;
+    grid-row: 2/3;}
+.rapids-card {grid-column: 8/10;
+    grid-row: 2/3;}
+#background {height: 725px;
+    background-color: #8e7c6e;
+    grid-column: 1/11;
+    grid-row: 4/9;}
+.mountains {grid-column: 2/7;
+    grid-row: 5/8;
+    width: 100%;
+    box-shadow: 5px 5px 10px green;}
 #hero-msg h1, #hero-msg h4, .button-box, main section {text-align: center;
-    color: black;
-}
-#background {
-    height: 725px;
-}
+    color: black;}
+#hero-msg h4 {color: white;}
 h1, h2, .msg {font-family: "Roboto Slab", "Rock Salt", Oswald;}
 body {font-family: "Kaushan Script", "Oswald", "Roboto Slab";
     background-color: #588157;
@@ -22,31 +52,42 @@ body {font-family: "Kaushan Script", "Oswald", "Roboto Slab";
     padding: 0;}
 .msg {line-height: 1.5em;
     padding: 35px;
-    text-align: center;}
-.home-title {font-size: 2em;}
-header {background-color: rgba(20,30,13, .7);}
+    text-align: center;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    background-color: #6f7364;
+    box-shadow: 5px 5px 10px black;}
+.home-title {font-size: 2em;
+    color: white;
+    margin-top: 10px;}
+header {background-color: rgba(20,30,13, .7);
+    display: grid;
+    grid-template-columns: 150px auto;}
+#hero-msg .home-title {color: white;}
+main .home-grid {display: grid;
+    grid-template-columns: 10fr;}
 nav a:hover {
     background-color: black;
     color: #ff6f00;}
 .book, .join {
-    background-color: #588157;
+    background-color: #a96f43;
     color: black;
     text-decoration: none;
     font-size: 18px;
     padding: 15px 30px;
     margin-top: 50px;
     border-radius: 5px;}   
-.book:hover, .join:hover, #background {
+.book:hover, .join:hover {
     background-color: #588157;
     color: black;} 
-footer {background-color: #ff6f00;}
-.home-title {color: navy;
-margin-top: 10px;}
-h4 {color: black;}
-.msg, h2, p {color: black;}
-footer {color: black;
+footer {background-color: #ff6f00;
     padding: 25px 50px;
-    margin-top: 200px;} 
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;}
+h4 {color: black;}
+.msg, h2, p {color: black;} 
 footer a {color: navy;
     text-decoration: none;}
 footer a:hover {color: white}
@@ -55,12 +96,56 @@ footer a:hover {color: white}
 footer p {font-size: 1.2em;}
 footer p a:hover {text-decoration: underline;}
 h2 {margin: 0;}
-#logo_link {padding-top: 5px;}
-nav a {padding: 35px;}
 .icon {padding-top: 10px;}
 .msg p {padding-bottom: 15px;}
 footer .social img {padding-top: 15px;}
 .rivers-card, .camping-card, .rapids-card {margin: 200px 0;}
 .card-img {
-    border: 10px solid #ff6f00;}
+    border: 10px solid #ff6f00;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;}
+.card-img:hover {opacity: .6;
+    transform: scale(1.1);}
 main section img {box-sizing: border-box;}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
