--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -107,32 +107,18 @@ footer .social img {padding-top: 15px;}
 .card-img:hover {opacity: .6;
     transform: scale(1.1);}
 main section img {box-sizing: border-box;}
-
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
-        height: auto;
-    }
-    nav, footer {
-        flex-direction: column;
-    }
-    nav a {
-        display: block;
-        padding: 15px;
-    }
-    #hero {
-        margin-top: 0;
-    }
-    #hero-msg {
-        margin-top: 0;
-    }
-    #hero-msg h4 {
-        display: none;
-    }
-    .home-title {
-        font-size: 25px;
-        color: #6f7364;
-    }
+        height: auto;}
+    nav, footer {flex-direction: column;}
+    nav a {display: block;
+        padding: 15px;}
+    #hero {margin-top: 0;}
+    #hero-msg {margin-top: 0;}
+    #hero-msg h4 {display: none;}
+    .home-title {font-size: 25px;
+        color: #6f7364;}
     .rivers-card, .camping-card, .rapids-card { 
         margin: 50px auto;
         width: 60%;
