--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -107,6 +107,47 @@ footer .social img {padding-top: 15px;}
 .card-img:hover {opacity: .6;
     transform: scale(1.1);}
 main section img {box-sizing: border-box;}
+
+
+
+
+#hero-bold {display: grid;
+    margin-top: -250px;}
+#hero-text {display: grid;
+    margin-top: -200px;}
+.page-two {grid-column: 1/2;
+    grid-row: 1/2;
+    color: white;
+   }
+.home-first, .book {grid-column: 2/3;
+    text-align: center;
+    color: white;
+    grid-row: 1/2;
+    }
+.book {background-size: contain;
+    font-size: 1.2em;
+    text-align: center;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    }
+#hero-text h4 {color: black;
+    background-color: #a96f43;
+text-align: center;}
+.home-play {display: grid;
+    grid-template-columns: repeat(10, 1fr);}
+.salmon-river {grid-column: 2/4;
+    grid-row: 2/3;
+    text-align: left;}
+.gray-canyon {grid-column: 5/7;
+    grid-row: 2/3;
+    text-align: left;}
+.grand-canyon {grid-column: 8/10;
+    grid-row: 2/3;
+    text-align: left;}
+h2 span {display: block;}
+h2 span {padding-top: 1.5em;}
+
+
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
