--- a/personal-site/portstyles/beststyle.css
+++ b/personal-site/portstyles/beststyle.css
@@ -109,6 +109,12 @@ a {text-decoration: none;}
     background-color: #684C70;
     color: #CCDDE2;}
 
+.blog-box {padding-top: 1ch;
+    font: bold;
+    width: 30%;
+    background-color: #3b7657;
+    color: #CCDDE2;}
+
 /* Add this CSS to your existing stylesheet or create a new one */
 
 /* Add this CSS to your existing stylesheet or create a new one */
